Добавлены тесты. Добавлен метод для правильного отображения значений на шкале. Оптимизирован метод для вычисления шага

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 anton.rb
 test.jpg
-data/
-minute_candles_db.json
+data/candles/minute_candles_db.json
 default_settings.xml
 .rspec
 spec/spec_helper.rb
