Добавлены тесты и оптимизированы и исправлены некоторые методы

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 anton.rb
 test.jpg
-minute_candles_db.json
+data/candles/minute_candles_db.json
 default_settings.xml
+.rspec
+spec/spec_helper.rb
+
